<resources>
    <string name="app_name">SuperheroApp</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="search">Search...</string>
    <string name="next">Continue</string>
    <string name="try_again">Try again please.</string>
    <string name="no_results">No results</string>
    <string name="welcome">Welcome Hero!!!</string>
    <string name="info_welcome">Get all SuperHeroes and Villians data from all universes.</string>
    <string name="info_welcome_working">Powered by SuperHeroAPI.</string>
</resources>