<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    app:cardBackgroundColor="@color/dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:src="@drawable/superman_man_hero_superhuman_svgrepo_com"
            app:tint="@color/superhero_item_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/error_search"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/info_welcome"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingVertical="1dp"
            android:text="@string/info_welcome_working"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/superhero_item_name"
            android:text="@string/next"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
